gen/24.3-beta/rpk/rpk-version.adoc
= rpk version
:description: rpk version

Prints the current rpk and Redpanda version.

This command prints the current rpk version and allows you to list the Redpanda 
version running on each node in your cluster.

To list the Redpanda version of each node in your cluster you may pass the
Admin API hosts via flags, profile, or environment variables.

== Usage

[,bash]
----
rpk version [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for version.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===